--- a/lms-frontend/package.json
+++ b/lms-frontend/package.json
@@ -14,8 +14,11 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.5.1",
+    "axios": "^1.7.9",
+    "chart.js": "^4.4.7",
     "framer-motion": "^11.15.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
