--- a/lms-frontend/package.json
+++ b/lms-frontend/package.json
@@ -12,12 +12,21 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@fullcalendar/core": "^6.1.15",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/react": "^6.1.15",
     "@headlessui/react": "^2.2.0",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "framer-motion": "^11.15.0",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.47",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.17.1",
+    "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
@@ -26,7 +35,9 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.0.2",
     "react-slick": "^0.30.3",
+    "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.3",
+    "recharts": "^2.15.1",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
